--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,28 @@
-body {
-    background-color: gray;
-}
 .nav {
     list-style-type: none;
-    background-color: gray;
+    background-color: rgb(109, 161, 231);
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
+
 ul.nav li {
-    float: left
+float: right;
 }
 ul.nav li a {
-    display: block;
-    padding: 8px 16px;
-    color: black;
-    text-decoration: none;
-    font-size: 20px;
+display: block;
+padding: 8px 16px;
+color: black;
+text-decoration: none;
 }
 ul.nav a:hover {
-    background-color: #555;
-    color: white;
+background-color: lightskyblue;
+color: lightslategray;
 }
+.active {
+background-color: lightskyblue;
+}
+
 
 .grid-container {
     display: grid;  
@@ -44,4 +45,29 @@ ul.nav a:hover {
 .image1-section {
     grid-column: 1 / span 3;
     grid-row: 2;
+}
+
+.main-content1 {
+    grid-column: 1 / span 2;
+    grid-row: 3;
+}
+
+.support-section1 {
+    grid-column: 1;
+    grid-row: 4;
+}
+
+.support-section2 {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+.main-content2 {
+    grid-column: 1 / span 2;
+    grid-row: 5;
+}
+
+.side-nav {
+    grid-column: 3;
+    grid-row: 3 / span 5;
 }
